load("//builds:defs.bzl", "bcr_project", "test_spec")
load("//builds:environments.bzl", "CIIMG", "LOCAL")

# Apache Avro C++ — data serialization (apache/avro).
# A "BCR module" project: the runner bazel_dep()s the module from the Bazel
# Central Registry and runs its own presubmit test target. Host tier: builds and
# tests with the ambient toolchain on LOCAL and in the full CI image (CIIMG) — no
# hermetic LLVM. (RBE/hermetic reached for only when needed.)
bcr_project(
    name = "avro-cpp",
    module = "avro-cpp",
    version = "1.12.0",
    bazel_version = "8.7.0",
    environments = [LOCAL, CIIMG],
    test = test_spec(targets = ["@avro-cpp//:all"], flags = ["-c", "opt"]),
)
