load("//builds:defs.bzl", "bcr_project", "test_spec")
load("//builds:environments.bzl", "CIIMG", "LOCAL")

# Basis Universal — GPU texture transcoder in C++ (BinomialLLC/basis_universal).
# A "BCR module" project: the runner bazel_dep()s the module from the Bazel
# Central Registry and runs its own presubmit test target. Host tier: builds and
# tests with the ambient toolchain on LOCAL and in the full CI image (CIIMG) — no
# hermetic LLVM. (RBE/hermetic reached for only when needed.)
bcr_project(
    name = "basis_universal",
    module = "basis_universal",
    version = "2.0.3",

    environments = [LOCAL, CIIMG],
    test = test_spec(targets = ["@basis_universal//..."], flags = ["-c", "opt"]),
)
