load("//builds:defs.bzl", "build_spec", "museum_project")
load("//builds:environments.bzl", "LOCAL")
load("//builds:overlays.bzl", "HERMETIC_LLVM", "HERMETIC_ZIP")

# Bazel itself — the flagship "Bazel builds Bazel" build (Java + C++).
# Source pinned in //tools/fetch:extension.bzl (@bazel_archive, release 9.1.1).
# The release's own .bazelversion pins 9.0.1; we run the 9.1.1 inner (a
# patch-newer Bazel builds it). If that mismatch bites, pin a 9.0.1 inner in
# //tools/fetch and set bazel_version here.
#
# Built with the fully-hermetic LLVM toolchain: Bazel's MODULE uses rules_cc's
# autodetected Unix toolchain, so HERMETIC_LLVM's --extra_toolchains wins for
# the C++ actions (the client + native code); Java uses Bazel's bundled JDK.
# HERMETIC_ZIP supplies `zip` on the inner PATH (Bazel's genrules call it ~72x),
# built from Info-ZIP source — so no host `zip` is required.
#
#   bazel run //builds/bazel:build_local_linux_amd64 -- //src:bazel-bin
#
# Starts LOCAL + build-only: a large build, validated on the host before fanning
# out to RBE/actiond.
museum_project(
    name = "bazel",
    source_archive = "@bazel_archive//file",
    strip_prefix = "bazel-9.1.1",
    toolchains = [HERMETIC_LLVM, HERMETIC_ZIP],
    environments = [LOCAL],
    # HERMETIC_LLVM appends the `llvm` module, which resolves newer transitive
    # versions of platforms/bazel_features/rules_cc than Bazel's own MODULE pins
    # as direct deps. Bazel-the-tool builds with strict direct-dependency
    # checking (error by default), so relax it for this project — the upgrades
    # are backward-compatible and only the overlay introduces them.
    build = build_spec(
        targets = ["//src:bazel-bin"],
        flags = ["--check_direct_dependencies=off"],
    ),
)
