load("//builds:defs.bzl", "bcr_project", "test_spec")
load("//builds:environments.bzl", "CIIMG", "LOCAL")

# ring — Rust crypto primitives (briansmith/ring).
# A "BCR module" project: the runner bazel_dep()s the module from the Bazel
# Central Registry and runs its own presubmit test target. Host tier: builds and
# tests with the ambient toolchain on LOCAL and in the full CI image (CIIMG) — no
# hermetic LLVM. (RBE/hermetic reached for only when needed.)
bcr_project(
    name = "briansmith_ring",
    module = "briansmith_ring",
    version = "0.17.14.bcr.1",

    environments = [LOCAL, CIIMG],
    test = test_spec(targets = ["@briansmith_ring//..."], flags = ["-c", "opt"]),
)
