# Parent module for the brotli go-bindings test build.
#
# brotli's tests live in a *nested* Bazel module at brotli-1.2.0/go
# (go/MODULE.bazel, module "brotli_go") whose go_test rules link the C library
# via cgo. That module pulls the C library with:
#     bazel_dep(name = "brotli", ...)
#     local_path_override(module_name = "brotli", path = "..")
# i.e. it expects the parent directory (the C sources we already build) to be a
# Bazel module. The release tarball ships no MODULE.bazel there, so the
# brotli_go test goal writes this file to ../MODULE.bazel (see BROTLI_GO_PARENT
# in //builds/brotli:BUILD.bazel). The hermetic LLVM toolchain is registered by
# the root (go) module, so this parent only needs the module declaration.
module(
    name = "brotli",
    version = "1.2.0",
    repo_name = "org_brotli",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
