load("//builds:defs.bzl", "bcr_project", "test_spec")
load("//builds:environments.bzl", "CIIMG", "LOCAL")

# ccronexpr — cron expression parser in C (exander77/supertinycron).
# A "BCR module" project: the runner bazel_dep()s the module from the Bazel
# Central Registry and runs its own presubmit test target. Host tier on LOCAL +
# the full CI image (CIIMG) with the ambient toolchain — no hermetic LLVM.
bcr_project(
    name = "ccronexpr",
    module = "ccronexpr",
    version = "2.1.0",

    environments = [LOCAL, CIIMG],
    test = test_spec(targets = ["@ccronexpr//:ccronexpr_test"], flags = ["-c", "opt"]),
)
