load("//builds:defs.bzl", "build_spec", "museum_project")
load("//builds:environments.bzl", "LOCAL", "RBE")
load("//builds:overlays.bzl", "HERMETIC_LLVM", "PLATFORMS_DEP")

# Crow — a header-only C++ microframework for building web services and APIs.
# Source pinned in //tools/fetch:extension.bzl (@crow_archive, release v1.3.2).
# First-party Bazel: pulls asio, zlib and catch2 from the BCR. Its root BUILD
# calls cc_library unloaded, so it runs on the Bazel 8.7 inner with the hermetic
# LLVM toolchain. Crow's only Bazel cc_test is SSL-gated (empty without the
# --//:ssl_enabled flag + OpenSSL), so this is a build-only project. PLATFORMS_DEP
# supplies @platforms visibility for the injected RBE platform (Crow's MODULE
# declares no direct platforms dep).
#
#   bazel run //builds/crow:build_local_linux_amd64
museum_project(
    name = "crow",
    source_archive = "@crow_archive//file",
    strip_prefix = "Crow-1.3.2",
    toolchains = [HERMETIC_LLVM, PLATFORMS_DEP],
    bazel_version = "8.7.0",
    environments = [LOCAL, RBE],
    # The Crow header library (interface target over asio).
    build = build_spec(targets = ["//:crow"], flags = ["-c", "opt"]),
)
