load("//builds:defs.bzl", "goal", "museum_project")
load("//builds:overlays.bzl", "HERMETIC_LLVM")

# cxx (cxx.rs) — safe FFI between Rust and C++. Build #3: exercises the Rust
# toolchain (rules_rust + hermetic rustc) plus, via the C++ bridge, the
# hermetic LLVM toolchain. Source pinned at tag 1.0.194.
#
#   bazel run //builds/cxx:build
#   bazel run //builds/cxx:test
museum_project(
    name = "cxx",
    source_archive = "@cxx_archive//file",
    strip_prefix = "cxx-1.0.194",
    overlays = [HERMETIC_LLVM],
    goals = [
        goal("build", targets = ["//:cxx", "//:core"]),
        goal("test", command = "test", targets = ["//..."]),
    ],
)
