load("//builds:defs.bzl", "build_spec", "museum_project", "test_spec")
load("//builds:environments.bzl", "ACTIOND", "LOCAL", "RBE")
load("//builds:overlays.bzl", "HERMETIC_LLVM")

# cxx (cxx.rs) — safe FFI between Rust and C++. Build #3: exercises the Rust
# toolchain (rules_rust + hermetic rustc) plus, via the C++ bridge, the
# hermetic LLVM toolchain. Source pinned at tag 1.0.194.
#
#   bazel run //builds/cxx:build_local_darwin_arm64
#   bazel run //builds/cxx:test_rbe_linux_amd64
museum_project(
    name = "cxx",
    source_archive = "@cxx_archive//file",
    strip_prefix = "cxx-1.0.194",
    toolchains = [HERMETIC_LLVM],
    environments = [LOCAL, RBE, ACTIOND],
    build = build_spec(targets = ["//:cxx", "//:core"]),
    test = test_spec(targets = ["//..."]),
)
