load("//builds:defs.bzl", "bcr_project", "test_spec")
load("//builds:environments.bzl", "CIIMG", "LOCAL")

# CxxUrl — a small C++ URL parser (chmike/CxxUrl).
# A "BCR module" project: the runner bazel_dep()s the module from the Bazel
# Central Registry and runs its own presubmit test target. Host tier on LOCAL +
# the full CI image (CIIMG) with the ambient toolchain — no hermetic LLVM.
bcr_project(
    name = "cxxurl",
    module = "cxxurl",
    version = "0.3",

    environments = [LOCAL, CIIMG],
    test = test_spec(targets = ["@cxxurl//:test"], flags = ["-c", "opt"]),
)
