load("//builds:defs.bzl", "bcr_project", "test_spec")
load("//builds:environments.bzl", "CIIMG", "LOCAL")

# FFTW3 — the Fastest Fourier Transform in the West, C (FFTW/fftw3).
# A "BCR module" project: the runner bazel_dep()s the module from the Bazel
# Central Registry and runs its own presubmit test target. Host tier: builds and
# tests with the ambient toolchain on LOCAL and in the full CI image (CIIMG) — no
# hermetic LLVM. (RBE/hermetic reached for only when needed.)
bcr_project(
    name = "fftw",
    module = "fftw",
    version = "3.3.10",

    environments = [LOCAL, CIIMG],
    test = test_spec(targets = ["@fftw//:bench_double"], flags = ["-c", "opt"]),
)
