load("//builds:defs.bzl", "build_spec", "museum_project", "test_spec")
load("//builds:environments.bzl", "LOCAL", "RBE")
load("//builds:overlays.bzl", "HERMETIC_LLVM")

# FTXUI — a functional C++ terminal-UI library (screen / dom / component).
# Source pinned in //tools/fetch:extension.bzl (@ftxui_archive, release v7.0.0),
# built with the fully-hermetic LLVM toolchain. FTXUI ships first-party Bazel
# files, but its test target pulls in googletest (cc_* unloaded), so it runs on
# the Bazel 8.7 inner like the other googletest-consuming C++ projects. (It
# declares a direct `platforms` dep, so no PLATFORMS_DEP overlay is needed.)
#
#   bazel run //builds/ftxui:build_local_linux_amd64
#   bazel run //builds/ftxui:test_local_linux_amd64
museum_project(
    name = "ftxui",
    source_archive = "@ftxui_archive//file",
    strip_prefix = "FTXUI-7.0.0",
    toolchains = [HERMETIC_LLVM],
    bazel_version = "8.7.0",
    environments = [LOCAL, RBE],
    build = build_spec(targets = ["//:ftxui"], flags = ["-c", "opt"]),
    # FTXUI's monolithic self-test (//:tests) — the screen/dom/component unit
    # tests, which render to in-memory buffers (no real TTY needed).
    test = test_spec(targets = ["//:tests"], flags = ["-c", "opt"]),
)
