load("//builds:defs.bzl", "build_spec", "museum_project", "test_spec")
load("//builds:environments.bzl", "ACTIOND", "LOCAL", "RBE")
load("//builds:overlays.bzl", "HERMETIC_LLVM")

# GoogleTest — the C++ test framework.
# Source pinned in //tools/fetch:extension.bzl (@googletest_archive, v1.17.0),
# built with the fully-hermetic LLVM toolchain. The iconic artifacts: the gtest
# + gtest_main libraries (//:gtest bundles gmock).
#
# googletest 1.17.0's BUILD files (root + the test packages) call cc_library/
# cc_test/cc_binary unloaded, which Bazel 9 removed from the builtins. Rather
# than patch a load() into every package, we run the Bazel 8.7 inner — recent
# enough to carry the zero-sysroot hermetic-llvm toolchain (needs repo_metadata,
# added in 8.3), and old enough to still autoload the cc_* rules as authored.
#
#   bazel run //builds/googletest:build_local_linux_amd64
#   bazel run //builds/googletest:test_local_linux_amd64
museum_project(
    name = "googletest",
    source_archive = "@googletest_archive//file",
    strip_prefix = "googletest-1.17.0",
    toolchains = [HERMETIC_LLVM],
    bazel_version = "8.7.0",
    environments = [LOCAL, RBE, ACTIOND],
    build = build_spec(targets = ["//:gtest", "//:gtest_main"], flags = ["-c", "opt"]),
    # googletest's own self-test suite: the C++ unit tests plus the Python-driven
    # tests that exercise the compiled binaries' output (rules_python supplies a
    # hermetic interpreter via bzlmod).
    test = test_spec(targets = ["//googletest/test/...", "//googlemock/test/..."]),
)
