load("//builds:defs.bzl", "bcr_project", "test_spec")
load("//builds:environments.bzl", "CIIMG", "LOCAL")

# gsl-lite — C++ Guidelines Support Library (gsl-lite/gsl-lite).
# A "BCR module" project: the runner bazel_dep()s the module from the Bazel
# Central Registry and runs its own presubmit test target. Host tier: builds and
# tests with the ambient toolchain on LOCAL and in the full CI image (CIIMG) — no
# hermetic LLVM. (RBE/hermetic reached for only when needed.)
bcr_project(
    name = "gsl-lite",
    module = "gsl-lite",
    version = "1.1.0",

    environments = [LOCAL, CIIMG],
    test = test_spec(targets = ["@gsl-lite//..."], flags = ["-c", "opt"]),
)
